--- a/index.html
+++ b/index.html
@@ -25,9 +25,26 @@
 
       <div class="jumbotron">
         <div class="center">
-        <img src="images/Style Guide header.png" alt="KSL Style Guide 2014">
+          <img src="images/Style Guide header.png" alt="KSL Style Guide 2014" class="img-responsive">
+        </div>
+        </div>
+      <div class="panel-group" id="accordion">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+          Show Set Talent Positions
+        </a>
+      </h4>
+    </div>
+    <div id="collapseOne" class="panel-collapse collapse">
+      <div class="panel-body">
+        <div class="center">
+         <img src="images/set_layout.png" alt="Set Layout">
         </div>
       </div>
+    </div>
+  </div>
       <div class="row">
         <div class="col-sm-6 col-md-4">
           <div class="thumbnail">
@@ -42,7 +59,7 @@
           <div class="thumbnail">
             <img src="images/B1-BMO-WIDE.png" alt="D2 D3 BMO Left">
               <div class="caption">
-                 <h3>B1 BMO Wide</h3>
+                 <h3>B2 BMO Wide</h3>
                 <!---<p class="tighterline">This is a test of the description to see what happens when it wraps</p>-->
               </div>
             </div> <!-- End of Thumbnail -->
